--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuySearch.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuySearch.razor
@@ -13,7 +13,7 @@
                   <div class="row align-items-center">
                       <div class="col-4"></div>
                     <div class="col-4">
-                    <img src="/images/logo/leptonx/pngegg.png" style="height:150px;" class="card-img-top" />
+                    <img src="@LogoUrl" style="height:150px;" class="card-img-top" />
                     </div>
                     <div class="col-4"></div>
                   </div>
@@ -29,7 +29,7 @@
                 <div class="row align-items-center">
                     <div class="col-3"></div>
                     <div class="col-6">
-                        <img src="/images/logo/leptonx/—Pngtree—coming soon banner style_8316626.png" style="height:300px;" class="card-img-top" />
+                        <img src="@BannerUrl" style="height:300px;" class="card-img-top" />
                     </div>
                     <div class="col-3"></div>
                 </div>
