--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -3,6 +3,7 @@
 @using Kooco.Pikachu.Localization;
 @using Kooco.Pikachu.OrderItems;
 @using Kooco.Pikachu.Orders;
+@using Kooco.Pikachu.Refunds;
 @using Microsoft.Extensions.Localization;
 @using Blazorise;
 @using Volo.Abp.AspNetCore.Components.Messages;
@@ -14,6 +15,7 @@
 @inject NavigationManager NavigationManager;
 @inject IUiMessageService _uiMessageService;
 @inject IOrderAppService _orderAppService;
+@inject IRefundAppService _refundAppService;
 @inject ICurrentUser CurrentUser;
 @inject IModalService ModalService;
 <style>
@@ -88,12 +90,21 @@
                         </div>
                         <div class="row">
                             <div class="col-12 text-end">
-                                <Button Type="ButtonType.Button" @onclick="OpenShipmentModal" Class="btn btn-sm btn-primary">
+                                <Button Type="ButtonType.Button" @onclick="OpenShipmentModal" Class="btn btn-sm btn-primary me-1">
                                     @L["ShipmentNotify"]
                                 </Button>
-                                <Button Type="ButtonType.Button" Class="btn btn-sm btn-danger">
-                                    @L["ApplyRefund"]
-                                </Button>
+                                @if(Order.PaymentMethod == PaymentMethods.CreditCard && Order.IsRefunded == false)
+                                {
+                                    <Button Type="ButtonType.Button" Class="btn btn-sm btn-danger" Clicked="ApplyRefund">
+                                        @L["ApplyRefund"]
+                                    </Button>
+                                }
+                                else
+                                {
+                                    <Button Type="ButtonType.Button" Disabled Class="btn btn-sm btn-danger" Clicked="ApplyRefund">
+                                        @L["ApplyRefund"]
+                                    </Button>
+                                }
                             </div>
                         </div>
                         <Divider></Divider>
