--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -68,7 +68,7 @@
             <div class="col-9">
                
                 <Validation UsePattern>
-    <TextEdit Pattern="^[A-Za-z]{4}\d{4}$"  MaxLength="8" @bind-Text="@CreateGroupBuyDto.ShortCode">
+    <TextEdit Pattern="^[A-Za-z]{8}$"  MaxLength="8" @bind-Text="@CreateGroupBuyDto.ShortCode">
         <Feedback>
             
             <ValidationError>Pattern does not match!</ValidationError>
