--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -71,7 +71,7 @@
             <div class="col-9">
                
                 <Validation UsePattern>
-    <TextEdit Pattern="^[A-Za-z]{4}\d{4}$"  MaxLength="8" @bind-Text="@EditGroupBuyDto.ShortCode">
+    <TextEdit Pattern="^[A-Za-z]{8}$"  MaxLength="8" @bind-Text="@EditGroupBuyDto.ShortCode">
         <Feedback>
             
             <ValidationError>Pattern does not match!</ValidationError>
