--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReportDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReportDetails.razor
@@ -12,11 +12,27 @@
 @inject IJSRuntime JSRuntime;
 @inject IOrderAppService _orderAppService;
 
+
 <style>
-    tbody td{
-        padding-top: 0.2rem;
-        padding-bottom: 0.2rem;
+    .tbl tbody td {
+        border-bottom: 1px solid;
+        border-color: lightgrey;
+        color:black;
+        font-weight:bold;
     }
+
+    .tbl tr:nth-child(even) {
+        background-color: dimgrey;
+
+    }
+
+    .tbl tr:nth-child(odd) {
+        background-color: lightgrey; /* Even rows background color */
+    }
+    /* Custom CSS class to set the height */
+.custom-detail-row {
+    height: 50px; /* Set the desired height in pixels */
+}
 </style>
 @if (ReportDetails != null)
 {
@@ -54,124 +70,87 @@
 }
 
 
-        <Card>
-        <CardBody>
-            <DataGrid TItem="OrderDto"
-                      Data="@Orders"
-            @bind-SelectedRow="@SelectedOrder"
-                      ReadData="OnDataGridReadAsync"
-                      TotalItems="TotalCount"
-                      DetailRowTrigger="@((e) => e.Item.OrderItems?.Count > 0 && e.Item.Id == SelectedOrder?.Id)"
-                      Responsive
-                       ShowPager="true"
-                       PageSize="PageSize"
-                       RowClicked="ToggleRow"
-                       SortChanged="OnSortChange">
-                 <DataGridColumns>
-                     <DataGridCommandColumn />
-                     <DataGridColumn Field="@nameof(OrderDto.OrderNo)" Caption="@L["OrderNo"]">
-                         <DisplayTemplate>
-                             @{
-                                var isExpanded = ExpandedRows.Contains(context.Id);
-                                var chevronClass = isExpanded ? "fa fa-caret-up" : "fa fa-caret-down";
-                            }
-                            <i class="@chevronClass"></i>
-                            @L[context.OrderNo]
-                        </DisplayTemplate>
-                    </DataGridColumn>
-                    <DataGridColumn Field="@nameof(OrderDto.CreationTime)" Caption="@L["OrderDate"]" />
-                    <DataGridColumn Field="@nameof(OrderDto.CustomerName)" Caption="@L["CustomerName"]" />
-                    <DataGridColumn Field="@nameof(OrderDto.CustomerEmail)" Caption="@L["Email"]" />
-                    <DataGridColumn Field="@nameof(OrderDto.OrderStatus)" Caption="@L["OrderStatus"]">
-                        <DisplayTemplate>
-                            @L[context.OrderStatus.ToString()]
-                        </DisplayTemplate>
-                    </DataGridColumn>
-                    <DataGridColumn Field="@nameof(OrderDto.ShippingStatus)" Caption="@L["ShippingStatus"]">
-                        <DisplayTemplate>
-                            @L[context.ShippingStatus.ToString()]
-                        </DisplayTemplate>
-                    </DataGridColumn>
-                    <DataGridColumn Field="@nameof(OrderDto.PaymentMethod)" Caption="@L["PaymentMethod"]">
-                        <DisplayTemplate>
-                            @L[context.PaymentMethod.ToString()]
-                        </DisplayTemplate>
-                    </DataGridColumn>
-                    <DataGridColumn TextAlignment="TextAlignment.Center" Field="@nameof(OrderDto.TotalAmount)" Caption="@L["CheckoutAmount"]">
-                        <DisplayTemplate>
-                            $ @context.TotalAmount.ToString("N2")
-                        </DisplayTemplate>
-                    </DataGridColumn>
-                </DataGridColumns>
-                <DetailRowTemplate>
-                    @{
-                        var orderItems = (context as OrderDto).OrderItems;
-                        <div class="mx-2 px-3 py-2 border">
-                            <div class="row">
-                                <div class="col-12">
-                                    <span class="fw-bold me-3">@context.GroupBuy.GroupBuyName</span>
-                                </div>
-                            </div>
-                        
-                            <Divider Class="m-1"></Divider>
-                            <table>
-                                <tbody>
+<Card>
+    <CardBody>
+        <DataGrid TItem="OrderDto"
+                  Data="@Orders"
+        @bind-SelectedRow="@SelectedOrder"
+                  ReadData="OnDataGridReadAsync"
+                  TotalItems="TotalCount"
+                  DetailRowTrigger="@((e) => e.Item.OrderItems?.Count > 0 && e.Item.Id == SelectedOrder?.Id)"
+                  Responsive
+                   ShowPager="true"
+                   PageSize="PageSize"
+                   RowClicked="ToggleRow"
+                   SortChanged="OnSortChange">
+             <DataGridColumns>
+                 <DataGridCommandColumn />
+                 <DataGridColumn Field="@nameof(OrderDto.OrderNo)" Caption="@L["OrderNo"]">
+                     <DisplayTemplate>
+                         @{
+                            var isExpanded = ExpandedRows.Contains(context.Id);
+                            var chevronClass = isExpanded ? "fa fa-caret-up" : "fa fa-caret-down";
+                        }
+                        <i class="@chevronClass"></i>
+                        @L[context.OrderNo]
+                    </DisplayTemplate>
+                </DataGridColumn>
+                <DataGridColumn Field="@nameof(OrderDto.CreationTime)" Caption="@L["OrderDate"]" />
+                <DataGridColumn Field="@nameof(OrderDto.CustomerName)" Caption="@L["CustomerName"]" />
+                <DataGridColumn Field="@nameof(OrderDto.CustomerEmail)" Caption="@L["Email"]" />
+                <DataGridColumn Field="@nameof(OrderDto.OrderStatus)" Caption="@L["OrderStatus"]">
+                    <DisplayTemplate>
+                        @L[context.OrderStatus.ToString()]
+                    </DisplayTemplate>
+                </DataGridColumn>
+                <DataGridColumn Field="@nameof(OrderDto.ShippingStatus)" Caption="@L["ShippingStatus"]">
+                    <DisplayTemplate>
+                        @L[context.ShippingStatus.ToString()]
+                    </DisplayTemplate>
+                </DataGridColumn>
+                <DataGridColumn Field="@nameof(OrderDto.PaymentMethod)" Caption="@L["PaymentMethod"]">
+                    <DisplayTemplate>
+                        @L[context.PaymentMethod.ToString()]
+                    </DisplayTemplate>
+                </DataGridColumn>
+                <DataGridColumn TextAlignment="TextAlignment.Center" Field="@nameof(OrderDto.TotalAmount)" Caption="@L["CheckoutAmount"]">
+                    <DisplayTemplate>
+                        $ @context.TotalAmount.ToString("N2")
+                    </DisplayTemplate>
+                </DataGridColumn>
+            </DataGridColumns>
+            <DetailRowTemplate>
+                @{
+                    var orderItems = (context as OrderDto).OrderItems;
+                    <div class="mx-2  col-12" style="background-color:white;">
+                        <table class="tbl w-100 mb-3">
+                            <tbody>
+                                @foreach (var item in orderItems)
+                                {
                                     <tr>
-                                        <td>@L["RecipientInformation"]</td>
-                                        <td>@context.CustomerName / @context.CustomerPhone</td>
+                                        <td>SKU</td>
+                                        @if (item.ItemType == ItemType.Item)
+                                        {
+                                            <td>@item.Item?.ItemName</td>
+                                        }
+                                        else if (item.ItemType == ItemType.SetItem)
+                                        {
+                                            <td>@item.SetItem?.SetItemName</td>
+                                        }
+                                        else if (item.ItemType == ItemType.Freebie)
+                                        {
+                                            <td>@item.Freebie?.ItemName</td>
+                                        }
+                                        <td>@item.Spec</td>
+                                        <td>@item.Quantity</td>
                                     </tr>
-                                    <tr>
-                                        <td>@L["ShippingMethod"]</td>
-                                        <td>@L[context.DeliveryMethod.ToString()]</td>
-                                    </tr>
-                                    <tr>
-                                        <td>@L["Address"]</td>
-                                        <td class="d-none">@context.AddressDetails, @context.Road, @context.District, @context.City</td>
-                                        <td>@context.AddressDetails</td>
-                                    </tr>
-                                    <tr>
-                                        <td>@L["Remarks"]</td>
-                                        <td>@context.Remarks</td>
-                                    </tr>
-                                    <tr>
-                                        <td>@L["MerchantRemarks"]</td>
-                                        <td>@context.Remarks</td>
-                                    </tr>
-                                    <tr>
-                                        <td>@L["OrderItems"]</td>
-                                        <td>
-                                            @foreach (var item in orderItems)
-                                            {
-                                                @if(item.ItemType == ItemType.Item)
-                                                {
-                                                    <div mb-1>
-                                                        <span>@item.Spec</span>
-                                                        <span>@item.Item.ItemName x @item.Quantity</span>
-                                                    </div>
-                                                }
-                                                @if (item.ItemType == ItemType.SetItem)
-                                                {
-                                                    <div mb-1>
-                                                        <span>@item.Spec</span>
-                                                        <span>@item.SetItem.SetItemName x @item.Quantity</span>
-                                                    </div>
-                                                }
-                                                @if (item.ItemType == ItemType.Freebie)
-                                                {
-                                                    <div mb-1>
-                                                        <span>@item.Spec</span>
-                                                        <span>@item.Freebie.ItemName x @item.Quantity</span>
-                                                    </div>
-                                                }
-                                            }
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    }
-                </DetailRowTemplate>
-            </DataGrid>
-        </CardBody>
-    </Card>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                }
+            </DetailRowTemplate>
+        </DataGrid>
+    </CardBody>
+</Card>
 
