--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/CreateAutomaticEmails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/CreateAutomaticEmails.razor
@@ -2,6 +2,7 @@
 
 @using Blazorise.Components;
 @using Kooco.Pikachu.AutomaticEmails;
+@using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.GroupBuys;
 @using Kooco.Pikachu.Localization;
 @using Microsoft.Extensions.Localization;
@@ -105,6 +106,21 @@
                                     SelectionMode="AutocompleteSelectionMode.Multiple"
                                     @bind-SelectedValues="Model.GroupBuyIds">
                     </Autocomplete>
+                    </div>
+                </div>
+                <div class="row justify-content-center mb-2">
+                    <div class="col-2">
+                        @L["RecurrenceType"]
+                        <span class="text-danger"> *</span>
+                    </div>
+                    <div class="col-7">
+                        <Select TValue="RecurrenceType" Class="form-select"
+                                @bind-SelectedValue="@Model.RecurrenceType">
+                            @foreach (var enumValue in Enum.GetValues(typeof(RecurrenceType)))
+                        {
+                            <SelectItem Value="@enumValue">@L[enumValue.ToString()]</SelectItem>
+                        }
+                    </Select>
                     </div>
                 </div>
                 <div class="row mt-3">
