--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/EditAutomaticEmails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/EditAutomaticEmails.razor
@@ -1,5 +1,6 @@
 ﻿@page "/EditAutomaticEmails/{Id}";
 @using Kooco.Pikachu.AutomaticEmails;
+@using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.GroupBuys;
 @using Kooco.Pikachu.Items.Dtos;
 @using Kooco.Pikachu.Localization;
@@ -106,6 +107,21 @@
                                     SelectionMode="AutocompleteSelectionMode.Multiple"
                                     @bind-SelectedValues="Model.GroupBuyIds">
                     </Autocomplete>
+                    </div>
+                </div>
+                <div class="row justify-content-center mb-2">
+                    <div class="col-2">
+                        @L["RecurrenceType"]
+                        <span class="text-danger"> *</span>
+                    </div>
+                    <div class="col-7">
+                        <Select TValue="RecurrenceType" Class="form-select"
+                                @bind-SelectedValue="@Model.RecurrenceType">
+                            @foreach (var enumValue in Enum.GetValues(typeof(RecurrenceType)))
+                            {
+                                <SelectItem Value="@enumValue">@L[enumValue.ToString()]</SelectItem>
+                            }
+                        </Select>
                     </div>
                 </div>
                 <div class="row mt-3">
